@@ -1,3 +1,4 @@
+* Add button to update customer
 * Add Stripe pull button to payment
 * Warn when changing credential
 
